pattern-1/integrator-deployment.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wso2ei-pattern1-integrator-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate  
  triggers:
  - type: ConfigChange  
  template:
    metadata:
      labels:
        deployment: wso2ei-pattern1-integrator
    spec:
      containers:
      - name: wso2ei-pattern1-integrator
        image: openshift/wso2ei-kubernetes-integrator:6.1.1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /services/echo.echoHttpSoap12Endpoint?wsdl
            port: 9763
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 8280
          protocol: TCP
        - containerPort: 8243
          protocol: TCP
        - containerPort: 9763
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        volumeMounts:
        - name: integrator-conf
          mountPath: /home/wso2user/wso2ei-6.1.1-conf/integrator/conf
        - name: integrator-conf-axis2
          mountPath: /home/wso2user/wso2ei-6.1.1-conf/integrator/conf-axis2
        - name: integrator-conf-datasources
          mountPath: /home/wso2user/wso2ei-6.1.1-conf/integrator/conf-datasources
        - name: integrator-conf-security
          mountPath: /home/wso2user/wso2ei-6.1.1-conf/integrator/conf-security          
      serviceAccountName: wso2svcacct
      securityContext:
        supplementalGroups: [0]
      volumes:
      - name: integrator-conf
        configMap:
          name: integrator-conf
      - name: integrator-conf-axis2
        configMap:
          name: integrator-conf-axis2
      - name: integrator-conf-datasources
        configMap:
          name: integrator-conf-datasources
      - name: integrator-conf-security
        configMap:
          name: integrator-conf-security
