pattern-1/mysql-deployment.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: DeploymentConfig
metadata:
  name: wso2ei-pattern1-mysql-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate  
  triggers:
  - type: ConfigChange
  selector:
    name: wso2ei-pattern1-mysql
  template:
    metadata:
      labels:
        name: wso2ei-pattern1-mysql
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst    
      volumes:
      - name: wso2ei-data
        persistentVolumeClaim:
          claimName: claim-wso2ei-mysql
      containers:
      - name: wso2ei-pattern1-mysql
        image: openshift/wso2ei-kubernetes-mysql:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: wso2ei-data
          mountPath: /var/lib/mysql
        readinessProbe: 
          timeoutSeconds: 15
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          tcpSocket:
            port: 3306
        terminationMessagePath: /dev/termination-log
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
