pattern-1/integrator-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2ei-pattern1-integrator-gateway-service
spec:
  selector:
    deployment: wso2ei-pattern1-integrator
  ports:
  - name: pass-through-http
    port: 8280
    targetPort: 8280
    protocol: TCP
  - name: pass-through-https
    port: 8243
    targetPort: 8243
    protocol: TCP
