pattern-1/integrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2ei-pattern1-integrator-service
spec:
  sessionAffinity: ClientIP
  selector:
    deployment: wso2ei-pattern1-integrator
  ports:
  - name: servlet-http
    port: 9763
    targetPort: 9763
    protocol: TCP
    nodePort: 0
  - name: servlet-https
    port: 9443
    targetPort: 9443
    protocol: TCP
    nodePort: 0
