pattern-1/integrator-route-ui.yaml
apiVersion: v1
kind: Route
metadata:
  name: wso2ei-pattern1-integrator-route-ui
spec:
  to:
    kind: Service
    name: wso2ei-pattern1-integrator-service
    weight: 100
  port:
    targetPort: servlet-https
  tls:
    termination: passthrough
