pattern-1/integrator-route.1.yaml
apiVersion: v1
kind: Route
metadata:
  name: wso2ei-pattern1-integrator-gw-route
spec:
  to:
    kind: Service
    name: wso2ei-pattern1-integrator-service
    weight: 100
  port:
    targetPort: servlet-http
